// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns the proper shape 1`] = `
<i
  talonProps={
    Object {
      "errorMessage": "",
      "handleEditItem": [Function],
      "handleRemoveFromCart": [Function],
      "handleToggleFavorites": [Function],
      "handleUpdateItemQuantity": [Function],
      "isEditable": false,
      "isFavorite": false,
      "product": Object {
        "currency": "USD",
        "image": "test.webp",
        "name": "unit test",
        "options": Array [],
        "quantity": 7,
        "stockStatus": undefined,
        "unitPrice": 99,
        "urlKey": undefined,
        "urlSuffix": undefined,
      },
    }
  }
/>
`;

exports[`it returns the proper shape when use variant image is configured 1`] = `
<i
  talonProps={
    Object {
      "errorMessage": "",
      "handleEditItem": [Function],
      "handleRemoveFromCart": [Function],
      "handleToggleFavorites": [Function],
      "handleUpdateItemQuantity": [Function],
      "isEditable": true,
      "isFavorite": false,
      "product": Object {
        "currency": "USD",
        "image": "variant1.webp",
        "name": "unit test",
        "options": Array [
          Object {
            "id": 22,
            "option_label": "Color",
            "value_id": 2,
            "value_label": "red",
          },
        ],
        "quantity": 7,
        "stockStatus": undefined,
        "unitPrice": 99,
        "urlKey": undefined,
        "urlSuffix": undefined,
      },
    }
  }
/>
`;
